tket-hseries/src/llvm/snapshots/tket_hseries__llvm__futures__test__emit_futures_codegen@llvm14_3.snap
---
source: tket-hseries/src/llvm/futures.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define void @_hl.main.1(i64 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @___dec_future_refcount(i64 %0)
  ret void
}

declare void @___dec_future_refcount(i64)
