tket-hseries/src/llvm/snapshots/tket_hseries__llvm__futures__test__emit_futures_codegen@llvm14_5.snap
---
source: tket-hseries/src/llvm/futures.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i64, i64 } @_hl.main.1(i64 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @___inc_future_refcount(i64 %0)
  %mrv = insertvalue { i64, i64 } undef, i64 %0, 0
  %mrv6 = insertvalue { i64, i64 } %mrv, i64 %0, 1
  ret { i64, i64 } %mrv6
}

declare void @___inc_future_refcount(i64)
